--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,12 +1,21 @@
 /* General*/
 
+@media screen and (min-width: 480px) {
+    h2 {
+        font-size: 3rem;
+    }
+    a {
+        font-size: 10rem;
+    }
+}
+
 body {
     font-family: "Open Sans", sans-serif;
     color: #323232;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
@@ -26,6 +35,11 @@ a {
     text-decoration: none;
     font-weight: 600;
     font-family: "Open Sans", sans-serif;
+    color: gray;
+    font-size: 0.75rem;
+}
+
+a:hover {
     color: #323232;
 }
 
