--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,14 +1,5 @@
 /* General*/
 
-@media screen and (min-width: 480px) {
-    h2 {
-        font-size: 3rem;
-    }
-    a {
-        font-size: 10rem;
-    }
-}
-
 body {
     font-family: "Open Sans", sans-serif;
     color: #323232;
@@ -148,4 +139,15 @@ a:hover {
     width: 1rem;
     height: auto;
     margin: 0 0.5rem 0 0.5rem;
+}
+
+/* Media queries */
+
+@media screen and (min-width: 480px) {
+    h2 {
+        font-size: 3rem;
+    }
+    a {
+        font-size: 1rem;
+    }
 }
