--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -3,6 +3,7 @@
 body {
     font-family: "Open Sans", sans-serif;
     color: #323232;
+    margin: 2rem 0 2rem 0;
 }
 
 h2 {
@@ -19,19 +20,18 @@ section, footer {
 .container {
     width: 100%;
     max-width: 1100px;
-    padding: 1rem;
+    padding: 2rem 1rem 2rem 1rem;
 }
 
 a {
     text-decoration: none;
-    font-weight: 600;
+    font-weight: bolder;
     font-family: "Open Sans", sans-serif;
-    color: gray;
     font-size: 0.75rem;
 }
 
-a:hover {
-    color: #323232;
+p {
+    font-size: 1.25rem;
 }
 
 /* Nav Section*/
@@ -64,6 +64,7 @@ a:hover {
 
 #about-me .container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 #about-me .content {
@@ -78,6 +79,7 @@ a:hover {
 
 #about-me .image-container {
     overflow: hidden;
+    margin-top: 2rem;
 }
 
 #about-me .image-container img {
@@ -141,13 +143,46 @@ a:hover {
     margin: 0 0.5rem 0 0.5rem;
 }
 
+#footer p {
+    font-size: 0.75rem;
+}
+
 /* Media queries */
 
 @media screen and (min-width: 480px) {
     h2 {
         font-size: 3rem;
     }
+
     a {
         font-size: 1rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    #about-me .container {
+        flex-wrap: nowrap;
+    }
+
+    #about-me .image-container {
+        margin: 0;
+    }
+
+    body {
+        margin: 0;
+    }
+
+    a:hover {
+        color: #323232;
+    }
+
+    a {
+        text-decoration: none;
+        font-weight: 600;
+        font-family: "Open Sans", sans-serif;
+        color: gray;
+        font-size: 0.75rem;
     }
 }
